--- a/my/templates/base.html
+++ b/my/templates/base.html
@@ -2,7 +2,7 @@
 <html>
 	<header>
 	    <hgroup class="crearfix">
-	        <title>Episode 4</title>
+	        <title>Web Application Project Management - WAPM</title>
 	        <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='stylem.css') }}"/>
 	    </hgroup>
     </header>
