--- a/my/templates/crearUsuario.html
+++ b/my/templates/crearUsuario.html
@@ -34,11 +34,11 @@
 		</dl>
           <dl>
         		<dt><label>Direccion:</label></dt> 
-                <dd><input type="text" id="direccion" name="direccion" required /> </dd>  	 
+                <dd><input type="text" id="direccion" name="direccion" /> </dd>  	 
 		</dl>
           <dl>
         		<dt><label>Telefono:</label></dt> 
-                <dd><input type="text" id="telefono" name="telefono" required /> </dd>  	 
+                <dd><input type="text" id="telefono" name="telefono" /> </dd>  	 
 		</dl>
          </fieldset>
        <fieldset class="action">
